Finished sections 2.1 Object Tracking and 2.2 Multi-Camera Target Localization

--- a/text/tex/bibliography.bib
+++ b/text/tex/bibliography.bib
@@ -255,3 +255,514 @@
 	year={1998},
 	publisher={Science Museum, London, and National Museum of American History, Smithsonian Institution}
 }
+
+@article{Yang20113823,
+	title = {Recent advances and trends in visual tracking: A review },
+	journal = {Neurocomputing },
+	volume = {74},
+	number = {18},
+	pages = {3823 - 3831},
+	year = {2011},
+	note = {},
+	issn = {0925-2312},
+	doi = {http://dx.doi.org/10.1016/j.neucom.2011.07.024},
+	url = {http://www.sciencedirect.com/science/article/pii/S0925231211004668},
+	author = {Hanxuan Yang and Ling Shao and Feng Zheng and Liang Wang and Zhan Song},
+	keywords = {Visual tracking},
+	keywords = {Feature descriptor},
+	keywords = {Online learning},
+	keywords = {Contextural information},
+	keywords = {Monte Carlo sampling}
+}
+
+@article{Li:2013:SAM:2508037.2508039,
+	author = {Li, Xi and Hu, Weiming and Shen, Chunhua and Zhang, Zhongfei and Dick, Anthony and Hengel, Anton Van Den},
+	title = {A Survey of Appearance Models in Visual Object Tracking},
+	journal = {ACM Trans. Intell. Syst. Technol.},
+	issue_date = {September 2013},
+	volume = {4},
+	number = {4},
+	month = oct,
+	year = {2013},
+	issn = {2157-6904},
+	pages = {58:1--58:48},
+	articleno = {58},
+	numpages = {48},
+	url = {http://doi.acm.org/10.1145/2508037.2508039},
+	doi = {10.1145/2508037.2508039},
+	acmid = {2508039},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {Visual object tracking, appearance model, features, statistical modeling},
+} 
+
+@TECHREPORT{Tomasi91detectionand,
+	author = {Carlo Tomasi and Takeo Kanade},
+	title = {Detection and Tracking of Point Features},
+	institution = {International Journal of Computer Vision},
+	year = {1991}
+}
+
+@ARTICLE{Kass88snakes:active,
+	author = {Michael Kass and Andrew Witkin and Demetri Terzopoulos},
+	title = {Snakes: Active contour models},
+	journal = {INTERNATIONAL JOURNAL OF COMPUTER VISION},
+	year = {1988},
+	volume = {1},
+	number = {4},
+	pages = {321--331}
+}
+
+@ARTICLE{ActiveContour-BasedVisualTracking, 
+	author={W. Hu and X. Zhou and W. Li and W. Luo and X. Zhang and S. Maybank}, 
+	journal={IEEE Transactions on Image Processing}, 
+	title={Active Contour-Based Visual Tracking by Integrating Colors, Shapes, and Motions}, 
+	year={2013}, 
+	volume={22}, 
+	number={5}, 
+	pages={1778-1792}, 	
+	doi={10.1109/TIP.2012.2236340}, 
+	ISSN={1057-7149}, 
+	month={May},
+}
+
+@article{Delamarre2001328,
+	title = "3D Articulated Models and Multiview Tracking with Physical Forces",
+	journal = "Computer Vision and Image Understanding ",
+	volume = "81",
+	number = "3",
+	pages = "328 - 357",
+	year = "2001",
+	note = "",
+	issn = "1077-3142",
+	doi = "http://dx.doi.org/10.1006/cviu.2000.0892",
+	url = "http://www.sciencedirect.com/science/article/pii/S1077314200908920",
+	author = "Quentin Delamarre and Olivier Faugeras"
+}
+
+@inproceedings{conf/isvc/MigniotA13,
+	added-at = {2013-10-17T00:00:00.000+0200},
+	author = {Migniot, Cyrille and Ababsa, Fakhreddine},
+	biburl = {http://www.bibsonomy.org/bibtex/25828318709024595c86c448e34456e4e/dblp},
+	booktitle = {ISVC (2)},
+	crossref = {conf/isvc/2013-2},
+	ee = {http://dx.doi.org/10.1007/978-3-642-41939-3_59},
+	interhash = {f45ea640478872935586c73553b8cbcd},
+	intrahash = {5828318709024595c86c448e34456e4e},
+	isbn = {978-3-642-41938-6},
+	keywords = {dblp},
+	pages = {603-612},
+	publisher = {Springer},
+	series = {Lecture Notes in Computer Science},
+	timestamp = {2013-10-17T00:00:00.000+0200},
+	title = {3D Human Tracking in a Top View Using Depth Information Recorded by the Xtion Pro-Live Camera.},
+	url = {http://dblp.uni-trier.de/db/conf/isvc/isvc2013-2.html#MigniotA13},
+	volume = 8034,
+	year = 2013
+}
+
+@INPROCEEDINGS{ObjectTrackinginMonochromaticVideo,
+	author = {David Herman and Filip Ors{\'{a}}g and Martin
+	Drahansk{\'{y}}},
+	title = {Object Tracking in Monochromatic Video Sequences Using
+	Particle Filter},
+	pages = {120--128},
+	booktitle = {7th Scientific International Conference - Enviromental
+	Protection of Population},
+	year = {2012},
+	location = {Brno, CZ},
+	publisher = {Karel Englis College Inc.},
+	ISBN = {978-80-86710-57-0},
+	language = {english},
+	url = {http://www.fit.vutbr.cz/research/view_pub.php?id=9954}
+}
+
+@INPROCEEDINGS{ProbabilisticVisualTrackingTemplate, 
+	author={X. Mei and S. K. Zhou and F. Porikli}, 
+	booktitle={2007 IEEE International Conference on Multimedia and Expo}, 
+	title={Probabilistic Visual Tracking via Robust Template Matching and Incremental Subspace Update}, 
+	year={2007}, 
+	pages={1818-1821}, 
+	doi={10.1109/ICME.2007.4285026}, 
+	ISSN={1945-7871}, 
+	month={July},
+}
+
+@article{Comaniciu:2003:KOT:776753.776799,
+	author = {Comaniciu, Dorin and Ramesh, Visvanathan and Meer, Peter},
+	title = {Kernel-Based Object Tracking},
+	journal = {IEEE Trans. Pattern Anal. Mach. Intell.},
+	issue_date = {May 2003},
+	volume = {25},
+	number = {5},
+	month = may,
+	year = {2003},
+	issn = {0162-8828},
+	pages = {564--575},
+	numpages = {12},
+	url = {http://dx.doi.org/10.1109/TPAMI.2003.1195991},
+	doi = {10.1109/TPAMI.2003.1195991},
+	acmid = {776799},
+	publisher = {IEEE Computer Society},
+	address = {Washington, DC, USA},
+} 
+
+@INPROCEEDINGS{MultipleCollaborativeKernelTracking, 
+	author={Zhimin Fan and Ying Wu and Ming Yang}, 
+	booktitle={Computer Vision and Pattern Recognition, 2005. CVPR 2005. IEEE Computer Society Conference on}, 
+	title={Multiple collaborative kernel tracking}, 
+	year={2005}, 
+	volume={2}, 
+	pages={502-509 vol. 2}, 
+	keywords={image motion analysis;image representation;tracking;articulated motion;constraint formulation;multiple collaborative kernel tracking;rigorous analysis;visual tracking;Collaboration;Computational efficiency;Computer vision;Convolution;Equations;Kernel;Motion measurement;Observability;Particle tracking;Target tracking}, 
+	doi={10.1109/CVPR.2005.242}, 
+	ISSN={1063-6919}, 
+	month={June},
+}
+
+@INPROCEEDINGS{Multi-kernelCorrelationFilterForVisualTracking, 
+	author={M. Tang and J. Feng}, 
+	booktitle={2015 IEEE International Conference on Computer Vision (ICCV)}, 
+	title={Multi-kernel Correlation Filter for Visual Tracking}, 
+	year={2015}, 
+	pages={3038-3046}, 
+	keywords={computer vision;estimation theory;filtering theory;object tracking;spectral analysis;MKCF based tracker;correlation filter based tracker;discrete candidate scale;feature pyramid;invariance-discriminative power spectrum;location error;multikernel correlation filter;object bounding box;optimal bisection search;representation error;scale estimation method;visual tracking;Correlation;Estimation;Image color analysis;Kernel;Target tracking;Training;Visualization}, 
+	doi={10.1109/ICCV.2015.348}, 
+	month={Dec},
+}
+
+@inproceedings{Nebehay2014WACV,
+	author = {Nebehay, Georg and Pflugfelder, Roman},
+	booktitle = {Winter Conference on Applications of Computer Vision},
+	month = mar,
+	pages = {862--869},
+	publisher = {IEEE},
+	title = {Consensus-based Matching and Tracking of Keypoints for Object Tracking},
+	year = {2014}
+}
+
+@MISC{Schaeffer_acomparison,
+	author = {Cameron Schaeffer},
+	title = {A Comparison of Keypoint Descriptors in the Context of Pedestrian Detection: FREAK vs. SURF vs. BRISK},
+	year = {2013}
+}
+
+@inproceedings{conf/icpr/MiksikM12,
+	added-at = {2014-01-07T15:56:01.000+0100},
+	author = {Miksik, Ondrej and Mikolajczyk, Krystian},
+	biburl = {http://www.bibsonomy.org/bibtex/2ca7992593d97fed79a69e68375f6f161/anas.razeq},
+	booktitle = {ICPR},
+	crossref = {conf/icpr/2012},
+	ee = {http://ieeexplore.ieee.org/xpl/freeabs_all.jsp?arnumber=6460718},
+	interhash = {5b29f3b29f83689d7fbeb342f07d6d65},
+	intrahash = {ca7992593d97fed79a69e68375f6f161},
+	isbn = {978-1-4673-2216-4},
+	keywords = {Comparison Feature},
+	pages = {2681-2684},
+	publisher = {IEEE},
+	timestamp = {2014-01-07T15:56:01.000+0100},
+	title = {Evaluation of local detectors and descriptors for fast feature matching.},
+	url = {http://dblp.uni-trier.de/db/conf/icpr/icpr2012.html#MiksikM12},
+	year = 2012
+}
+
+@inproceedings{Ortiz:2012:FFR:2354409.2354903,
+	author = {Ortiz, Raphael},
+	title = {FREAK: Fast Retina Keypoint},
+	booktitle = {Proceedings of the 2012 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+	series = {CVPR '12},
+	year = {2012},
+	isbn = {978-1-4673-1226-4},
+	pages = {510--517},
+	numpages = {8},
+	url = {http://dl.acm.org/citation.cfm?id=2354409.2354903},
+	acmid = {2354903},
+	publisher = {IEEE Computer Society},
+	address = {Washington, DC, USA},
+	keywords = {Retina,Robustness,Humans,Detectors,Vectors,Kernel,Noise},
+} 
+
+@article{Bay:2008:SRF:1370312.1370556,
+	author = {Bay, Herbert and Ess, Andreas and Tuytelaars, Tinne and Van Gool, Luc},
+	title = {Speeded-Up Robust Features (SURF)},
+	journal = {Comput. Vis. Image Underst.},
+	issue_date = {June, 2008},
+	volume = {110},
+	number = {3},
+	month = jun,
+	year = {2008},
+	issn = {1077-3142},
+	pages = {346--359},
+	numpages = {14},
+	url = {http://dx.doi.org/10.1016/j.cviu.2007.09.014},
+	doi = {10.1016/j.cviu.2007.09.014},
+	acmid = {1370556},
+	publisher = {Elsevier Science Inc.},
+	address = {New York, NY, USA},
+	keywords = {Camera calibration, Feature description, Interest points, Local features, Object recognition},
+} 
+
+@Article{sift,
+	author="Lowe, David G.",
+	title="Distinctive Image Features from Scale-Invariant Keypoints",
+	journal="International Journal of Computer Vision",
+	volume="60",
+	number="2",
+	pages="91--110",
+	issn="1573-1405",
+	doi="10.1023/B:VISI.0000029664.99615.94",
+	url="http://dx.doi.org/10.1023/B:VISI.0000029664.99615.94"
+}
+
+@inproceedings{Rublee:2011:OEA:2355573.2356268,
+	author = {Rublee, Ethan and Rabaud, Vincent and Konolige, Kurt and Bradski, Gary},
+	title = {ORB: An Efficient Alternative to SIFT or SURF},
+	booktitle = {Proceedings of the 2011 International Conference on Computer Vision},
+	series = {ICCV '11},
+	year = {2011},
+	isbn = {978-1-4577-1101-5},
+	pages = {2564--2571},
+	numpages = {8},
+	url = {http://dx.doi.org/10.1109/ICCV.2011.6126544},
+	doi = {10.1109/ICCV.2011.6126544},
+	acmid = {2356268},
+	publisher = {IEEE Computer Society},
+	address = {Washington, DC, USA},
+} 
+
+@InProceedings{eth_biwi_00633,
+	author = {Michael D. Breitenstein and Fabian Reichlin},
+	title = {Robust Tracking-by-Detection using a Detector Confidence Particle Filter},
+	booktitle = {IEEE International Conference on Computer Vision},
+	year = {2009},
+	month = {October},
+	keywords = {}
+}
+
+@INPROCEEDINGS{FastKeypointRecognitionInTenLinesOfCode, 
+	author={M. Ozuysal and P. Fua and V. Lepetit}, 
+	booktitle={Computer Vision and Pattern Recognition, 2007. CVPR '07. IEEE Conference on}, 
+	title={Fast Keypoint Recognition in Ten Lines of Code}, 
+	year={2007}, 
+	pages={1-8}, 
+	doi={10.1109/CVPR.2007.383123}, 
+	ISSN={1063-6919}, 
+	month={June},
+}
+
+@article{DBLP:journals/corr/abs-1211-5829,
+	author    = {Reza Oji},
+	title     = {An Automatic Algorithm for Object Recognition and Detection Based
+	on {ASIFT} Keypoints},
+	journal   = {CoRR},
+	volume    = {abs/1211.5829},
+	year      = {2012},
+	url       = {http://arxiv.org/abs/1211.5829},
+	timestamp = {Sat, 01 Dec 2012 20:32:38 +0100},
+	biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/abs-1211-5829},
+	bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@INPROCEEDINGS{AFastTemplateMatchingAlgorithm, 
+	author={Sanjay Kumar Sahani and G. Adhikari and B. Das}, 
+	booktitle={Image Information Processing (ICIIP), 2011 International Conference on}, 
+	title={A fast template matching algorithm for aerial object tracking}, 
+	year={2011}, 
+	pages={1-6}, 
+	doi={10.1109/ICIIP.2011.6108841}, 
+	month={Nov},
+}
+
+@INPROCEEDINGS{EnhancedGaussianMixtureModels, 
+	author={K. Wang and Z. Ren}, 
+	booktitle={Mechatronics and Automation, 2007. ICMA 2007. International Conference on}, 
+	title={Enhanced Gaussian Mixture Models for Object Recognition Using Salient Image Features}, 
+	year={2007}, 
+	pages={1229-1233}, 
+	doi={10.1109/ICMA.2007.4303724}, 
+	month={Aug},
+}
+
+@article{EfficientScan-windowGPGPU,
+	author = { Li Zhang and Ramakant Nevatia},
+	title = {Efficient scan-window based object detection using GPGPU},
+	journal ={2012 IEEE Computer Society Conference on Computer Vision and Pattern Recognition Workshops},
+	volume = {0},
+	isbn = {978-1-4244-2339-2},
+	year = {2008},
+	pages = {1-7},
+	doi = {http://doi.ieeecomputersociety.org/10.1109/CVPRW.2008.4563097},
+	publisher = {IEEE Computer Society},
+	address = {Los Alamitos, CA, USA},
+}
+
+@INPROCEEDINGS{violaJones, 
+	author={P. Viola and M. Jones}, 
+	booktitle={Computer Vision and Pattern Recognition, 2001. CVPR 2001. Proceedings of the 2001 IEEE Computer Society Conference on}, 
+	title={Rapid object detection using a boosted cascade of simple features}, 
+	year={2001}, 
+	volume={1}, 
+	pages={I-511-I-518 vol.1}, 	
+	doi={10.1109/CVPR.2001.990517}, 
+	month={},
+}
+
+@INPROCEEDINGS{RobustObjectDetectionViaSoftCascade, 
+	author={L. Bourdev and J. Brandt}, 
+	booktitle={Computer Vision and Pattern Recognition, 2005. CVPR 2005. IEEE Computer Society Conference on}, 
+	title={Robust object detection via soft cascade}, 
+	year={2005}, 
+	volume={2}, 
+	pages={236-243 vol. 2}, 	
+	doi={10.1109/CVPR.2005.310}, 
+	ISSN={1063-6919}, 
+	month={June},
+}
+
+@article{aslani2013optical,
+	title={Optical flow based moving object detection and tracking for traffic surveillance},
+	author={Aslani, Sepehr and Mahdavi-Nasab, Homayoun},
+	journal={International Journal of Electrical, Electronics, Communication, Energy Science and Engineering},
+	volume={7},
+	number={9},
+	pages={789--793},
+	year={2013}
+}
+
+@ARTICLE{Bouguet00pyramidalimplementation,
+	author = {Jean-yves Bouguet},
+	title = {Pyramidal implementation of the Lucas Kanade feature tracker},
+	journal = {Intel Corporation, Microprocessor Research Labs},
+	year = {2000}
+}
+
+@Inbook{Noh2013,
+	author="Noh, SeungJong
+	and Jeon, Moongu",
+	editor="Lee, Kyoung Mu
+	and Matsushita, Yasuyuki
+	and Rehg, James M.
+	and Hu, Zhanyi",
+	chapter="A New Framework for Background Subtraction Using Multiple Cues",
+	title="Computer Vision -- ACCV 2012: 11th Asian Conference on Computer Vision, Daejeon, Korea, November 5-9, 2012, Revised Selected Papers, Part III",
+	year="2013",
+	publisher="Springer Berlin Heidelberg",
+	address="Berlin, Heidelberg",
+	pages="493--506",
+	isbn="978-3-642-37431-9",
+	doi="10.1007/978-3-642-37431-9_38",
+	url="http://dx.doi.org/10.1007/978-3-642-37431-9_38"
+}
+
+@INPROCEEDINGS{Movingobjectdetection, 
+	author={J. Lee and S. Lim and J. G. Kim and B. Kim and D. Lee}, 
+	booktitle={Consumer Electronics (ISCE 2014), The 18th IEEE International Symposium on}, 
+	title={Moving object detection using background subtraction and motion depth detection in depth image sequences}, 
+	year={2014}, 
+	pages={1-2}, 	
+	doi={10.1109/ISCE.2014.6884308}, 
+	month={June},
+}
+
+@techreport{Welch:1995:IKF:897831,
+	author = {Welch, Greg and Bishop, Gary},
+	title = {An Introduction to the Kalman Filter},
+	year = {1995},
+	source = {http://www.ncstrl.org:8900/ncstrl/servlet/search?formname=detail\&id=oai%3Ancstrlh%3Auncch_cs%3AUNCCH_CS%2F%2FTR95-041},
+	publisher = {University of North Carolina at Chapel Hill},
+	address = {Chapel Hill, NC, USA},
+} 
+
+@article{cuevas2005kalman,
+	title={Kalman filter for vision tracking},
+	author={Cuevas, Erik V and Zaldivar, Daniel and Rojas, Raul},
+	year={2005}
+}
+
+@article{journals/cviu/BimboD11,
+	added-at = {2012-04-03T13:06:22.000+0200},
+	author = {Bimbo, Alberto Del and Dini, Fabrizio},
+	biburl = {http://www.bibsonomy.org/bibtex/250bb9347e2710284f51c587ece87fb76/gxf1027},
+	ee = {http://dx.doi.org/10.1016/j.cviu.2011.01.004},
+	interhash = {3a921d22a21ab1219e2dc543c694a876},
+	intrahash = {50bb9347e2710284f51c587ece87fb76},
+	journal = {Computer Vision and Image Understanding},
+	keywords = {filter particle tracking},
+	number = 6,
+	pages = {771-786},
+	timestamp = {2012-04-03T13:06:22.000+0200},
+	title = {Particle filter-based visual tracking with a first order dynamic model and uncertainty adaptation.},
+	url = {http://dblp.uni-trier.de/db/journals/cviu/cviu115.html#BimboD11},
+	volume = 115,
+	year = 2011
+}
+
+@article{Gasparini14FallDetection,
+	AUTHOR = {Gasparrini, Samuele and Cippitelli, Enea and Spinsante, Susanna and Gambi, Ennio},
+	TITLE = {A Depth-Based Fall Detection System Using a Kinect Sensor},
+	JOURNAL = {Sensors},
+	VOLUME = {14},
+	YEAR = {2014},
+	NUMBER = {2},
+	PAGES = {2756--2775},
+	URL = {http://www.mdpi.com/1424-8220/14/2/2756},
+	PubMedID = {24521943},
+	ISSN = {1424-8220},
+	DOI = {10.3390/s140202756}
+}
+
+@article{Isard98condensation,
+	author = {Michael Isard and Andrew Blake},
+	title = {CONDENSATION - conditional density propagation for visual tracking},
+	journal = {International Journal of Computer Vision},
+	year = {1998},
+	volume = {29},
+	pages = {5--28}
+}
+
+@book{doucet2001sequential,
+	title={Sequential Monte Carlo Methods in Practice},
+	author={Doucet, A. and Smith, A. and de Freitas, N. and Gordon, N.},
+	isbn={9780387951461},
+	lccn={00047093},
+	series={Information Science and Statistics},
+	url={https://books.google.cz/books?id=uxX-koqKtMMC},
+	year={2001},
+	publisher={Springer New York}
+}
+
+@book{Hartley:2003:MVG:861369,
+	author = {Hartley, Richard and Zisserman, Andrew},
+	title = {Multiple View Geometry in Computer Vision},
+	year = {2003},
+	isbn = {0521540518},
+	edition = {2},
+	publisher = {Cambridge University Press},
+	address = {New York, NY, USA},
+} 
+
+@book{Cyganek:2007:ICV:1214366,
+	author = {Cyganek, B.},
+	title = {An Introduction to 3D Computer Vision Techniques and Algorithms},
+	year = {2007},
+	isbn = {047001704X},
+	publisher = {John Wiley \& Sons},
+} 
+
+@book{Stockman:2001:CV:558008,
+	author = {Stockman, George and Shapiro, Linda G.},
+	title = {Computer Vision},
+	year = {2001},
+	isbn = {0130307963},
+	edition = {1st},
+	publisher = {Prentice Hall PTR},
+	address = {Upper Saddle River, NJ, USA},
+} 
+
+@book{Forsyth:2002:CVM:580035,
+	author = {Forsyth, David A. and Ponce, Jean},
+	title = {Computer Vision: A Modern Approach},
+	year = {2002},
+	isbn = {0130851981},
+	publisher = {Prentice Hall Professional Technical Reference},
+} 
